<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/image_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="#FFF"
            android:background="@null"
            android:hint="@string/entree"
            android:textAlignment="center"
            android:textStyle="bold|italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entree_"
            android:minHeight="48dp"
            android:textColorHint="#"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="#FFF"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:hint="@string/plat_principal"
            android:textAlignment="center"
            android:textStyle="bold|italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plat_"
            android:minHeight="48dp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/fromage"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/fruit"/>

        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/midi"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/soir"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"/>
</RelativeLayout>